<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.chibusoft.smartcinema.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
       >

    <ImageView
        android:layout_width="@dimen/moviewidth"
        android:layout_height="@dimen/movieheight"
        android:scaleType="centerCrop"
        android:id="@+id/movieimage_details"
        android:contentDescription="@string/grid_images"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

        <TextView
            android:id="@+id/title_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Geostorm war far infinity"
            android:textSize="@dimen/text_size_largest"
            android:maxLines="5"
            android:paddingLeft="@dimen/text_margin"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryLight"
            />


        <TextView
        android:id="@+id/release"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

        <TextView
        android:id="@+id/release_details"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_meduim"
        />

        <ImageButton
        android:id="@+id/favorite_btn"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_favorite_border_black_48dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="addFavorite"
            android:contentDescription="@string/add_my_favorities_movies_action_button" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/vote"
        android:text="@string/vote_average"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/text_margin"
        android:textSize="@dimen/text_size_meduim"
        />

    <TextView
        android:id="@+id/vote_details"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_meduim"
        />

    <TextView
        android:id="@+id/synopsis"
        android:text="@string/plot_synopsis"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/text_margin"
        android:textSize="@dimen/text_size_meduim"
        />


    <TextView
        android:id="@+id/synopsis_details"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_meduim"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textStyle="bold"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/trailer_label"
            android:text="@string/trailer"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            />


        <ListView
            android:id="@+id/listview_trailer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textStyle="bold"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/reviews"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            />


        <ListView
            android:id="@+id/listview_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

</LinearLayout>
</ScrollView>

