<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chibusoft.smartcinema.MainActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </android.support.v7.widget.RecyclerView>



    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_marginTop="10dp"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

</FrameLayout>


